[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
d = "^0.2.2"
dvc = {extras = ["ssh"], version = "^2.56.0"}
pip = "^23.2.1"
protobuf = "3.20.0"
torch = {url="https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
transformers = "4.35.0"
datasets = "2.14.6"
tokenizers = "0.14.1"

bitsandbytes = "0.41.1"
peft = "0.5.0"
accelerate = "0.24.0"
trl = "0.4.7"
wandb = "^0.15.8"
sentencepiece = "0.1.96"
[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
isort = "^5.11.4"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
dvc = "^2.56.0"
easydict = "^1.10"
hydra-core = "^1.3.2"
bentoml = "1.0.20"
google = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
